// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should match the snapshot 1`] = `<styled.div />`;

exports[`should receive correct padding based on size selection 1`] = `
.c0 {
  background-color: transparent;
  display: block;
  height: 0;
  padding-bottom: 36px;
  vertical-align: middle;
}

<div
  className="c0"
/>
`;

exports[`should render inline-block if set to horizontal 1`] = `
.c0 {
  background-color: transparent;
  display: inline-block;
  height: 0;
  padding-right: 23px;
  vertical-align: middle;
}

<div
  className="c0"
/>
`;
